--- a/FelaBaleFigthers/Layouts/CommonLayerMaster.xml
+++ b/FelaBaleFigthers/Layouts/CommonLayerMaster.xml
@@ -107,6 +107,24 @@
             </instances>
             <effects />
         </layer>
+        <layer name="Fader" sid="835790243648890">
+            <initially-visible>1</initially-visible>
+            <background-color>0,0,0</background-color>
+            <transparent>0</transparent>
+            <parallax>
+                <x>0</x>
+                <y>0</y>
+            </parallax>
+            <zoom-rate>1</zoom-rate>
+            <opacity>1</opacity>
+            <force-own-texture>0</force-own-texture>
+            <global>1</global>
+            <use-render-cells>0</use-render-cells>
+            <blend-mode>0</blend-mode>
+            <effect-fallback>0</effect-fallback>
+            <instances />
+            <effects />
+        </layer>
     </layers>
     <nonworld-instances>
         <instance type="LoadedLanguage" uid="697" />
